// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC Media Container EC - Media container image - Media container image renders correctly 1`] = `
<figure
  class="ecl-media-container"
>
  <img
    alt=""
    class="ecl-media-container__media"
    src=""
  />
  <figcaption
    class="ecl-media-container__caption"
  />
</figure>
`;

exports[`EC Media Container EC - Media container video Media container video renders correctly 1`] = `
<figure
  class="ecl-media-container"
>
  <img
    alt=""
    class="ecl-media-container__media"
    src=""
  />
  <figcaption
    class="ecl-media-container__caption"
  />
</figure>
`;

exports[`EC Media Container Generic tests renders correctly with extra attributes 1`] = `
<figure
  class="ecl-media-container"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <img
    alt=""
    class="ecl-media-container__media"
    src=""
  />
  <figcaption
    class="ecl-media-container__caption"
  />
</figure>
`;

exports[`EC Media Container Generic tests renders correctly with extra class names 1`] = `
<figure
  class="ecl-media-container custom-media-container custom-media-container--test"
>
  <img
    alt=""
    class="ecl-media-container__media"
    src=""
  />
  <figcaption
    class="ecl-media-container__caption"
  />
</figure>
`;
